[gd_scene load_steps=8 format=2]

[ext_resource path="res://meshes/personal_computer/PersonalComputer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/open_sync_door.gd" type="Script" id=2]
[ext_resource path="res://ui/icons/a_button.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.354, 1.148, 2 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 0.780392, 0.780392, 0.780392, 1 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 1, 0.53 )

[node name="Interactable" type="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.8465, 2.17061, 0 )
collision_layer = 12
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0851228, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.980714 )
mesh = SubResource( 2 )
material/0 = null

[node name="PersonalComputer" parent="MeshInstance" instance=ExtResource( 1 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0.980714 )

[node name="ButtonSprite3D" type="Sprite3D" parent="MeshInstance"]
transform = Transform( 7.5, 0, 0, 0, 7.5, 0, 0, 0, 1, 0, 3, 6 )
visible = false
billboard = 1
double_sided = false
texture = ExtResource( 3 )

[node name="InteractionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.25, 0 )
collision_layer = 2048
collision_mask = 2

[node name="CollisionPolygon" type="CollisionPolygon" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
depth = 2.5
polygon = PoolVector2Array( -2, 0, 2, 0 )

[node name="ActiveLight" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.98478, 0.173803, 0, -0.173803, 0.98478, 0, 0.731886, 1.89441 )
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null
[connection signal="body_entered" from="InteractionArea" to="." method="on_player_registered"]
[connection signal="body_exited" from="InteractionArea" to="." method="on_player_unregistered"]
